--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
     "@nrwl/nx-cloud": "latest",
+    "@types/node": "^18.13.0",
     "nx": "15.6.3",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "typescript": "^4.9.5"
   },
   "workspaces": [
     "packages/*"
