--- a/packages/angular-workspace/package.json
+++ b/packages/angular-workspace/package.json
@@ -26,6 +26,7 @@
     "@angular-devkit/build-angular": "^15.1.5",
     "@angular/cli": "~15.1.5",
     "@angular/compiler-cli": "^15.1.0",
+    "@stencil/angular-output-target": "^0.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
