--- a/packages/angular-workspace/angular.json
+++ b/packages/angular-workspace/angular.json
@@ -133,5 +133,18 @@
         }
       }
     }
+  },
+  "storybook": {
+    "builder": "@storybook/angular:start-storybook",
+    "options": {
+      "browserTarget": "angular-cli:build",
+      "port": 6006
+    }
+  },
+  "build-storybook": {
+    "builder": "@storybook/angular:build-storybook",
+    "options": {
+      "browserTarget": "angular-cli:build"
+    }
   }
 }
