--- a/packages/angular-workspace/package.json
+++ b/packages/angular-workspace/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -31,7 +31,6 @@
     "@angular/compiler-cli": "^15.1.0",
     "@babel/core": "^7.20.12",
     "@compodoc/compodoc": "^1.1.19",
-    "@stencil/angular-output-target": "^0.5.0",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-interactions": "^6.5.16",
