--- a/packages/stencil-library/package.json
+++ b/packages/stencil-library/package.json
@@ -19,16 +19,18 @@
     "loader/"
   ],
   "scripts": {
-    "build": "stencil build --docs",
+    "build": "stencil build --prod --docs",
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate"
   },
   "dependencies": {
-    "@stencil/core": "^3.0.0"
+    "@stencil/core": "^3.0.0",
+    "@stencil/sass": "^3.0.0-0"
   },
   "devDependencies": {
+    "@stencil/angular-output-target": "^0.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "jest": "^27.5.1",
