--- a/packages/angular-workspace/package.json
+++ b/packages/angular-workspace/package.json
@@ -39,6 +39,7 @@
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "angular-cli-ghpages": "^1.0.5",
     "babel-loader": "^8.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
