feat: add storybook in stencil

--- a/packages/angular-workspace/tsconfig.json
+++ b/packages/angular-workspace/tsconfig.json
@@ -34,5 +34,8 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "exclude": [
+    "**/*.stories.*",
+  ]
 }
