--- a/packages/stencil-library/package.json
+++ b/packages/stencil-library/package.json
@@ -23,16 +23,28 @@
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "stencil generate"
+    "generate": "stencil generate",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@stencil/core": "^3.0.0",
     "@stencil/sass": "^3.0.0-0"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.0",
     "@stencil/angular-output-target": "^0.5.0",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-webpack4": "^6.5.16",
+    "@storybook/html": "^6.5.16",
+    "@storybook/manager-webpack4": "^6.5.16",
+    "@storybook/testing-library": "^0.0.13",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
+    "babel-loader": "^8.3.0",
     "jest": "^27.5.1",
     "jest-cli": "^27.5.1",
     "puppeteer": "^19.5.2"
